# utpc

./: .gitignore  LICENSE  Readme.md  todo.txt  utpc.cabal
app/: Main.hs
src/: Hackerrank.hs  UTPC.hs
static/: index.html
test/: Spec.hs
