name:                utpc
version:             0.1.0.0
synopsis:            UT Austin competitive programming website.
description:         Please see README.md
homepage:            http://github.com/githubuser/utpc#readme
license:             BSD3
license-file:        LICENSE
author:              Arnav Sastry
maintainer:          arnavsastry@gmail.com
copyright:           2015 Arnav Sastry
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable utpc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
