name:                utpc
version:             0.1.0.0
synopsis:            UT Austin competitive programming website.
description:         Please see README.md
homepage:            http://github.com/githubuser/utpc#readme
license:             BSD3
license-file:        LICENSE
author:              Arnav Sastry
maintainer:          arnavsastry@gmail.com
copyright:           2015 Arnav Sastry
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable utpc
  hs-source-dirs:      src
  main-is:             UTPC.hs
  default-language:    Haskell2010
  build-depends:       aeson,
                       base >= 4.7 && < 5,
                       containers,
                       http-types,
                       lens,
                       lens-aeson,
                       scotty,
                       transformers,
                       wai-extra,
                       wreq
