name:                utpc
version:             0.1.0.0
synopsis:            UT Austin competitive programming website.
description:         Please see README.md
homepage:            http://github.com/arknave/utpc#readme
license:             BSD3
license-file:        LICENSE
author:              Arnav Sastry
maintainer:          arnavsastry@gmail.com
copyright:           2015 Arnav Sastry
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UTPC, Hackerrank
  build-depends:       aeson,
                       base >= 4.7 && < 5,
                       containers,
                       http-types,
                       lens,
                       lens-aeson,
                       scotty,
                       transformers,
                       wai,
                       wai-extra,
                       wreq

executable utpc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       utpc
  default-language:    Haskell2010

test-suite utpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , utpc
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

